# Smart-complaint-classifier-public-service.

./: .env  .gitignore  GEMINI.md  LICENSE  README.md  admin_dashboard.py  config.py  list_models.py  list_models_check.py  main.py  pyproject.toml  streamlit_app.py
Web/: GEMINI.md
database/: complaints.json
features/analytics/: analytics.py
features/classifier/: classifier.py
features/complaints/: complaints.py
